[package]
name = "sqlserver-query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
tiberius = "0.12.2"
async-std = { version = "1.12.0", features = ["attributes"] }
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
tower-http = {version = "0.5.2", features=["cors"]}
